feat: add site structure in singolo1.html

--- a/singolo1.html
+++ b/singolo1.html
@@ -3,9 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="singolo1.css">
     <title>Singolo</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <h1>SINGOLO</h1>
+            <ul class="header_links">
+                <li class="header_link"><a href=""></a></li>
+                <li class="header_link"><a href=""></a></li>
+                <li class="header_link"><a href=""></a></li>
+                <li class="header_link"><a href=""></a></li>
+                <li class="header_link"><a href=""></a></li>
+            </ul>
+        </nav>
+    </header>
+    <mian>
+        <div class="slider"></div>
+        <section class="services">
+            <div class="about">
+                <h2></h2>
+            </div>
+            <div class="service_list">
+                <ul class="services">
+                    <li class="about_service">
+                        <div class="service_icon"><img src="" alt=""></div>
+                        <div class="service_description">
+                            <div class="service_title"></div>
+                            <div class="service_text"></div>
+                        </div>
+                    </li>
+                    <li class="about_service">
+                        <div class="service_icon"><img src="" alt=""></div>
+                        <div class="service_description">
+                            <div class="service_title"></div>
+                            <div class="service_text"></div>
+                        </div>                        
+                    </li>
+                    <li class="about_service">
+                        <div class="service_icon"><img src="" alt=""></div>
+                        <div class="service_description">
+                            <div class="service_title"></div>
+                            <div class="service_text"></div>
+                        </div>                        
+                    </li>
+                    <li class="about_service">
+                        <div class="service_icon"><img src="" alt=""></div>
+                        <div class="service_description">
+                            <div class="service_title"></div>
+                            <div class="service_text"></div>
+                        </div>                        
+                    </li>
+                    <li class="about_service">
+                        <div class="service_icon"><img src="" alt=""></div>
+                        <div class="service_description">
+                            <div class="service_title"></div>
+                            <div class="service_text"></div>
+                        </div>                        
+                    </li>
+                    <li class="about_service">
+                        <div class="service_icon"><img src="" alt=""></div>
+                        <div class="service_description">
+                            <div class="service_title"></div>
+                            <div class="service_text"></div>
+                        </div>                        
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </mian>
     
 </body>
 </html>
