--- a/singolo1.html
+++ b/singolo1.html
@@ -22,8 +22,13 @@
         </header>
         <div class="header_line"></div>
         <main class="">
-            <div class="slider h-ident-30">
-
+            <div class="img-slider h-ident-30">
+                <div class="btn_prev"><img src="assets/btn_prev.png" alt="prev"></div>
+                <div class="slider">
+                    <img src="assets/phone.png" alt="img1" class="images ">
+                    <img src="assets/phone.png" alt="img2" class="images">
+                </div>
+                <div class="btn_next"><img src="assets/btn_next.png" alt="next"></div>
             </div>
             <div class="slider_line"></div>
             <section class="services h-ident-30">
