--- a/singolo1.html
+++ b/singolo1.html
@@ -9,10 +9,10 @@
 <body>
     <div class="content">
         <header class="h-ident-30">
-            <h1>SINGOLO</h1>
+            <h1><a href="singolo1.html">SINGOLO</a></h1>
             <nav>
                 <ul class="header_links">
-                    <li class="header_link"><a href="#">home</a></li>
+                    <li class="header_link"><a class="active" href="#">home</a></li>
                     <li class="header_link"><a href="#">services</a></li>
                     <li class="header_link"><a href="#">portfolio</a></li>
                     <li class="header_link"><a href="#">about</a></li>
