--- a/singolo1.html
+++ b/singolo1.html
@@ -1,97 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="singolo1.css">
-    <title>Singolo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="singolo1.css">
+  <title>Singolo</title>
 </head>
 <body>
-    <div class="content">
-        <header class="h-ident-30">
-            <h1><a href="singolo1.html">SINGOLO</a></h1>
-            <nav>
-                <ul class="header_links">
-                    <li class="header_link"><a class="active" href="#">home</a></li>
-                    <li class="header_link"><a href="#">services</a></li>
-                    <li class="header_link"><a href="#">portfolio</a></li>
-                    <li class="header_link"><a href="#">about</a></li>
-                    <li class="header_link"><a href="#">contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="header_line"></div>
-        <main class="">
-            <div class="img-slider h-ident-30">
-                <div class="btn_prev"><img src="assets/btn_prev.png" alt="prev"></div>
-                <div class="slider">
-                    <img src="assets/phone.png" alt="img1" class="images ">
-                    <img src="assets/phone.png" alt="img2" class="images">
-                </div>
-                <div class="btn_next"><img src="assets/btn_next.png" alt="next"></div>
+  <div class="content">
+    <header class="h-ident-30">
+      <h1><a href="singolo1.html">SINGOLO</a></h1>
+      <nav>
+        <ul class="header_links">
+          <li class="header_link"><a class="active" href="#">home</a></li>
+          <li class="header_link"><a href="#">services</a></li>
+          <li class="header_link"><a href="#">portfolio</a></li>
+          <li class="header_link"><a href="#">about</a></li>
+          <li class="header_link"><a href="#">contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="header_line"></div>
+    <main class="">
+      <div class="img-slider h-ident-30">
+        <div class="btn_prev"><img src="assets/btn_prev.png" alt="prev"></div>
+        <div class="slider">
+          <img class="images" src="assets/phone.png" alt="img1" >
+          <img class="images" src="assets/phone.png" alt="img2" >
+        </div>
+        <div class="btn_next"><img src="assets/btn_next.png" alt="next"></div>
+      </div>
+      <div class="slider_line"></div>
+      <section class="services h-ident-30">
+        <h2>Our Services</h2>
+        <p class="about_text">
+          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
+          mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
+          dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+        </p>
+        <ul class="service_list">
+          <li class="service">
+            <div class="service_icon"><img src="assets/pen_icon.png" alt="pen icon"></div>
+            <div class="service_description">
+              <div class="service_title">Custom Design</div>
+              <div class="service_text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+                laoreet, viverra lacus ut, ultrices velit.</div>
             </div>
-            <div class="slider_line"></div>
-            <section class="services h-ident-30">
-                <h2>Our Services</h2>
-                <p class="about_text">
-                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
-                    mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
-                    dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-                </p>
-                <ul class="service_list">
-                    <li class="service">
-                        <div class="service_icon"><img src="assets/pen_icon.png" alt="pen icon"></div>
-                        <div class="service_description">
-                            <div class="service_title">Custom Design</div>
-                            <div class="service_text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
-                                laoreet, viverra lacus ut, ultrices velit.</div>
-                        </div>
-                    </li>
-                    <li class="service">
-                        <div class="service_icon"><img src="assets/bulb_icon.png" alt="buble_icon"></div>
-                        <div class="service_description">
-                            <div class="service_title">Inovative Ideas</div>
-                            <div class="service_text">Quisque luctus, quam eget molestie commodo, lacus purus cursus
-                                purus, nec rutrum tellus dolor id lorem.</div>
-                        </div>                        
-                    </li>
-                    <li class="service">
-                        <div class="service_icon"><img src="assets/heart_icon.png" alt="heart_icon"></div>
-                        <div class="service_description">
-                            <div class="service_title">Love Is The Answer</div>
-                            <div class="service_text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
-                                turpis, et consequat felis. Quisque condimentum.</div>
-                        </div>                        
-                    </li>
-                    <li class="service">
-                        <div class="service_icon"><img src="assets/phone_icon.png" alt="phone_icon"></div>
-                        <div class="service_description">
-                            <div class="service_title">Responsive Layout</div>
-                            <div class="service_text">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
-                                blandit nunc ligula. Praesent elit leo.</div>
-                        </div>                        
-                    </li>
-                    <li class="service">
-                        <div class="service_icon"><img src="assets/bubble_icon.png" alt="bubble_icon"></div>
-                        <div class="service_description">
-                            <div class="service_title">24 / 7 Support</div>
-                            <div class="service_text">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla
-                                a sem erat. Pellentesque egestas venenatis lorem .</div>
-                        </div>                        
-                    </li>
-                    <li class="service">
-                        <div class="service_icon"><img src="assets/star_icon.png" alt="star_icon"></div>
-                        <div class="service_description">
-                            <div class="service_title">Feel Like A Star</div>
-                            <div class="service_text">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
-                                Fusce vitae aliquam tellus.</div>
-                        </div>                        
-                    </li>
-                </ul>
-            </section>
-            <div class="services_line"></div> 
-        </main>
-    </div>    
-    
+          </li>
+          <li class="service">
+            <div class="service_icon"><img src="assets/bulb_icon.png" alt="buble_icon"></div>
+            <div class="service_description">
+              <div class="service_title">Inovative Ideas</div>
+              <div class="service_text">Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                purus, nec rutrum tellus dolor id lorem.</div>
+            </div>                        
+          </li>
+          <li class="service">
+            <div class="service_icon"><img src="assets/heart_icon.png" alt="heart_icon"></div>
+            <div class="service_description">
+              <div class="service_title">Love Is The Answer</div>
+              <div class="service_text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                turpis, et consequat felis. Quisque condimentum.</div>
+            </div>                        
+          </li>
+          <li class="service">
+            <div class="service_icon"><img src="assets/phone_icon.png" alt="phone_icon"></div>
+            <div class="service_description">
+              <div class="service_title">Responsive Layout</div>
+              <div class="service_text">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
+                blandit nunc ligula. Praesent elit leo.</div>
+            </div>                        
+          </li>
+          <li class="service">
+            <div class="service_icon"><img src="assets/bubble_icon.png" alt="bubble_icon"></div>
+            <div class="service_description">
+              <div class="service_title">24 / 7 Support</div>
+              <div class="service_text">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla
+                a sem erat. Pellentesque egestas venenatis lorem .</div>
+            </div>                        
+          </li>
+          <li class="service">
+            <div class="service_icon"><img src="assets/star_icon.png" alt="star_icon"></div>
+            <div class="service_description">
+              <div class="service_title">Feel Like A Star</div>
+              <div class="service_text">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
+                Fusce vitae aliquam tellus.</div>
+            </div>                        
+          </li>
+        </ul>
+      </section>
+      <div class="services_line"></div> 
+    </main>
+  </div>    
+  
 </body>
 </html>
