feat: add structure AboutUs and his styles

--- a/singolo2.html
+++ b/singolo2.html
@@ -13,24 +13,62 @@
                 <h2>Portfolio</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
                 <ul class="filter">
-                    <li class="f-button active">All</li>
-                    <li class="f-button">Web Design</li>
-                    <li class="f-button">Graphic Design</li>
-                    <li class="f-button">Artwork</li>
+                    <li class="f_button active">All</li>
+                    <li class="f_button">Web Design</li>
+                    <li class="f_button">Graphic Design</li>
+                    <li class="f_button">Artwork</li>
                 </ul>
-                <div class="portfolio-images">
-                    <div class="portfolio-image"><img src="assets/portfolio-1.png" alt="portfolio-1" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-2.png" alt="portfolio-2" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-3.png" alt="portfolio-3" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-4.png" alt="portfolio-4" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-5.png" alt="portfolio-5" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-6.png" alt="portfolio-6" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-7.png" alt="portfolio-7" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-8.png" alt="portfolio-8" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-9.png" alt="portfolio-9" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-10.png" alt="portfolio-10" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-11.png" alt="portfolio-11" class="image"></div>
-                    <div class="portfolio-image"><img src="assets/portfolio-12.png" alt="portfolio-12" class="image"></div>
+                <div class="portfolio_images">
+                    <div class="portfolio_image"><img src="assets/portfolio-1.png" alt="portfolio-1" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-2.png" alt="portfolio-2" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-3.png" alt="portfolio-3" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-4.png" alt="portfolio-4" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-5.png" alt="portfolio-5" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-6.png" alt="portfolio-6" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-7.png" alt="portfolio-7" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-8.png" alt="portfolio-8" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-9.png" alt="portfolio-9" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-10.png" alt="portfolio-10" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-11.png" alt="portfolio-11" class="image"></div>
+                    <div class="portfolio_image"><img src="assets/portfolio-12.png" alt="portfolio-12" class="image"></div>
+                </div>
+            </section>
+            <section class="about_us h-ident-30">
+                <h2>About Us</h2>
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <div class="person_list">
+                    <div class="person">
+                        <div class="person_image"><img src="assets/photo-1.png" alt=""></div>
+                        <div class="person_info">
+                            <h3>Adam Jensen</h3>
+                            <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                            <div class="person_sotial">
+                                <a class=" " href="#"><span class="sotial facebook"></span></a>
+                                <a class=" " href="#"><span class="sotial google"></span></a>
+                                <a class=" " href="#"><span class="sotial twitter"></span></a>
+                                <a class=" " href="#"><span class="sotial linkedin"></span></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="person">
+                        <div class="person_image"><img src="assets/photo-2.png" alt=""></div>
+                        <div class="person_info">
+                            <h3>Desmond Miles</h3>
+                            <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in qua</p>
+                            <div class="person_sotial">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="person">
+                        <div class="person_image"><img src="assets/photo-3.png" alt=""></div>
+                        <div class="person_info">
+                            <h3>Scolara Visari</h3>
+                            <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turp</p>
+                            <div class="person_sotial">
+                             </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
