refactor: modify structure person list and his styles

--- a/singolo2.html
+++ b/singolo2.html
@@ -56,7 +56,10 @@
                             <h3>Desmond Miles</h3>
                             <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in qua</p>
                             <div class="person_sotial">
-
+                                <a class=" " href="#"><span class="sotial facebook"></span></a>
+                                <a class=" " href="#"><span class="sotial google"></span></a>
+                                <a class=" " href="#"><span class="sotial twitter"></span></a>
+                                <a class=" " href="#"><span class="sotial linkedin"></span></a>
                             </div>
                         </div>
                     </div>
@@ -66,6 +69,10 @@
                             <h3>Scolara Visari</h3>
                             <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turp</p>
                             <div class="person_sotial">
+                                <a class=" " href="#"><span class="sotial facebook"></span></a>
+                                <a class=" " href="#"><span class="sotial google"></span></a>
+                                <a class=" " href="#"><span class="sotial twitter"></span></a>
+                                <a class=" " href="#"><span class="sotial linkedin"></span></a>
                              </div>
                         </div>
                     </div>
