--- a/singolo3.html
+++ b/singolo3.html
@@ -19,15 +19,15 @@
                         <input type="text" name="subject" placeholder="Subject">
                         <textarea name="detail" id="" cols="30" rows="10" placeholder="Describe your project in detail..."></textarea>
                     </div>
-                    <div class="contact-info">
+                    <span class="contact-info">
                         <h3>Contact Information</h3>
                         <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. </p>
-                        <div class="contacts">
+                        <span class="contacts">
                             <span class="cantact"><span class="ico ico-location"></span>Elm St. 14/05 Lost City</span>
                             <span class="cantact"><span class="ico ico-phone"></span>03528 331 86 35</span>
                             <span class="cantact"><span class="ico ico-email"></span>info@singolo.com</span>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </div>
             </section>
         </main> 
