--- a/singolo3.html
+++ b/singolo3.html
@@ -19,26 +19,27 @@
                         <input type="text" name="subject" placeholder="Subject">
                         <textarea name="detail" id="" cols="30" rows="10" placeholder="Describe your project in detail..."></textarea>
                     </div>
-                    <span class="contact-info">
+                    <div class="col-4 contact-info">
                         <h3>Contact Information</h3>
-                        <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. </p>
-                        <span class="contacts">
-                            <span class="cantact"><span class="ico ico-location"></span>Elm St. 14/05 Lost City</span>
-                            <span class="cantact"><span class="ico ico-phone"></span>03528 331 86 35</span>
-                            <span class="cantact"><span class="ico ico-email"></span>info@singolo.com</span>
-                        </span>
-                    </span>
+                        <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver-<wbr>ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. </p>
+                        <div class="contacts">
+                            <span class="contact"><span class="ico ico-location"></span>Elm St. 14/05 Lost City</span>
+                            <span class="contact"><span class="ico ico-phone"></span>03528 331 86 35</span>
+                            <span class="contact"><span class="ico ico-email"></span>info@singolo.com</span>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main> 
         <footer class="footer h-ident-30">
-            <p></p>
-            <div class="footer_sotial">
-                <a class=" " href="#"><span class="sotial facebook"></span></a>
-                <a class=" " href="#"><span class="sotial google"></span></a>
-                <a class=" " href="#"><span class="sotial twitter"></span></a>
-                <a class=" " href="#"><span class="sotial linkedin"></span></a>
-              </div>
+            <div class="footer_info">
+                <p>&copy;&nbsp;Copyright&nbsp;2013</p>
+                <div class="footer_sotial">
+                    <a class=" " href="#"><span class="sotial facebook"></span></a>
+                    <a class=" " href="#"><span class="sotial google"></span></a>
+                    <a class=" " href="#"><span class="sotial twitter"></span></a>
+                    <a class=" " href="#"><span class="sotial linkedin"></span></a>                </div>
+            </div>
         </footer>
     </div>
 
