--- a/singolo3.html
+++ b/singolo3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="singolo3.css">
-    <title>Document</title>
+    <title>Singolo</title>
 </head>
 <body>
     <div class="content">
@@ -17,7 +17,7 @@
                         <input type="text" name="name" placeholder="Name (Required)">
                         <input type="text" name="email" placeholder="Email (Required)">
                         <input type="text" name="subject" placeholder="Subject">
-                        <textarea name="detail" id="" cols="30" rows="10" placeholder="Describe your project in detail..."></textarea>
+                        <textarea name="detail" cols="30" rows="10" placeholder="Describe your project in detail..."></textarea>
                     </div>
                     <div class="col-4 contact-info">
                         <h3>Contact Information</h3>
